Update webpage to include, vision, mission and motto7

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>G-fit: <em>A Lorem ipsum dolor sit amet consectetur </em></h2>
+						<h2>G-fit: <em>Fitness in nature for a healthy lifestyle. </em></h2>
 						<a href="#" class="button">Learn More</a>
 					</header>
 				</section>
@@ -68,21 +68,21 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
 									<h3>Vision</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>To motivate people to live an active lifestyle, connect with nature, and take positive action that improves their lives and the lives of others.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
 									<h3>Mission</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>GETTING FIT & CONNECTING WITH NATURE</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
 									<h3>Motto</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>Fitness in nature for a healthy lifestyle.</p>
 								</div>
 							</section>
 						</div>
