--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
 									<h3>Mission</h3>
-									<p>Getting fit & connecting with nature./p>
+									<p>Getting fit & connecting with nature.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
