--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
+								<li><!--
 									<a href="#">Dropdown</a>
 									<ul>
 										<li><a href="#">Lorem dolor</a></li>
@@ -40,7 +40,7 @@
 												<li><a href="#">Veroeros feugiat</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Veroeros feugiat</a></li> -->
 									</ul><!--
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
