added automatic image slideshow to the home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 			<!-- Header -->
 				<div id="header">
-
 					<!-- Logo -->
 						<h1><a href="index.html" id="logo">G-fit Adventures</a></h1>
 
@@ -54,6 +53,18 @@
 
 			<!-- Banner -->
 				<section id="banner">
+					<div class="mySlides fade">
+						<img src="../../images/gym_photo.jpg">
+					  </div>
+					  
+					  <div class="mySlides fade">
+						<img src="../../images/gfit_waterfall_scale.jpg">
+					  </div>
+					  
+					  <div class="mySlides fade">
+						<img src="../../images/gfit-ocean_scale.jpg">
+					  </div>
+
 					<header>
 						<h2>G-fit: <em>Fitness in nature for a healthy lifestyle. </em></h2>
 						<a href="#" class="button">Learn More</a>
@@ -228,5 +239,9 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+			<script src="/assets/scripts/main.js"></script>
+
+
 	</body>
+
 </html>
