--- a/index.html
+++ b/index.html
@@ -54,15 +54,11 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="mySlides fade">
-						<img src="../../images/gym_photo.jpg">
+						<img src="images/gfit_waterfall_scale.jpg">
 					  </div>
 					  
 					  <div class="mySlides fade">
-						<img src="../../images/gfit_waterfall_scale.jpg">
-					  </div>
-					  
-					  <div class="mySlides fade">
-						<img src="../../images/gfit-ocean_scale.jpg">
+						<img src="images/gfit-ocean_scale.jpg">
 					  </div>
 
 					<header>
